--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -10,8 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
+    "@tailwindcss/postcss": "^4.1.7",
+    "animate.css": "^4.1.1",
+    "autoprefixer": "^10.4.21",
+    "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^3.4.4",
+    "three": "^0.176.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
