--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^4.1.2",
+    "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^3.4.4",
     "three": "^0.176.0",
