--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-error-boundary": "^4.1.2",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.1",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^3.4.4",
     "three": "^0.176.0",
